20030130
 - (djm) Unbreak root password auth. Spotted by dtucker@zip.com.au

200301028
 - (djm) Search libposix4 and librt for nanosleep. From dtucker@zip.com.au 
   and openssh-unix-dev@thewrittenword.com 

200301027
 - (bal) Bugzilla 477 patch by wendyp@cray.com.  Define TIOCGPGRP for
   cray.  Also removed test for tcgetpgrp in configure.ac since it
   is no longer used.

20030124
 - (djm) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2003/01/23 08:58:47
     [sshd_config.5]
     typos; ok millert@
   - markus@cvs.openbsd.org 2003/01/23 13:50:27
     [authfd.c authfd.h readpass.c ssh-add.1 ssh-add.c ssh-agent.c]
     ssh-add -c, prompt user for confirmation (using ssh-askpass) when
     private agent key is used; with djm@; test by dugsong@, djm@; 
     ok deraadt@
   - markus@cvs.openbsd.org 2003/01/23 14:01:53
     [scp.c]
     bandwidth limitation patch (scp -l) from niels@; ok todd@, deraadt@
   - markus@cvs.openbsd.org 2003/01/23 14:06:15
     [scp.1 scp.c]
     scp -12; Sam Smith and others; ok provos@, deraadt@
 - (djm) Add TIMEVAL_TO_TIMESPEC macros

20030123
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2003/01/23 00:03:00
     [auth1.c]
     Don't log TIS auth response; "get rid of it" - markus@

20030122
 - (djm) OpenBSD CVS Sync
   - marc@cvs.openbsd.org 2003/01/21 18:14:36
     [ssh-agent.1 ssh-agent.c]
     Add a -t life option to ssh-agent that set the default lifetime.
     The default can still be overriden by using -t in ssh-add.
     OK markus@
 - (djm) Reorganise PAM & SIA password handling to eliminate some common code
 - (djm) Sync regress with OpenBSD -current

20030120
 - (djm) Fix compilation for NetBSD from dtucker@zip.com.au
 - (tim) [progressmeter.c] make compilers without long long happy.
 - (tim) [configure.ac] Add -belf to build ELF binaries on OpenServer 5 when
   using cc. (gcc already did)

20030118
 - (djm) Revert fix for Bug #442 for now.

20030117
 - (djm) Bug #470: Detect strnvis, not strvis in configure.